--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">Meta</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="logo_meta">WELCOME META PROJECT</string>
+    <string name="add_meta_button">Add New Meta</string>
+    <string name="list_meta_button">List Metas</string>
 
 </resources>
