--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,7 +5,11 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="logo_meta">WELCOME META PROJECT</string>
-    <string name="add_meta_button">Add New Meta</string>
+    <string name="add_meta_button">Add Meta</string>
     <string name="list_meta_button">List Metas</string>
+    <string name="name_field">Name</string>
+    <string name="description_field">Description</string>
+    <string name="save_meta_button">Save</string>
+    <string name="cancel_meta_button">Cancel</string>
 
 </resources>
