--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,10 +9,13 @@
     <string name="list_meta_button">List Metas</string>
     <string name="name_field">Name</string>
     <string name="description_field">Description</string>
+    <string name="name">Name:</string>
+    <string name="description">Description:</string>
     <string name="save_meta_button">Save</string>
     <string name="cancel_meta_button">Cancel</string>
     <string name="addPath">Add Path</string>
     <string name="origin">Origin:</string>
     <string name="destination">Destination:</string>
+    <string name="routeButton">Route View</string>
 
 </resources>
